MLD -> Bootstrap + clean blog template

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -1,2 +1,3 @@
-//@import "lib/_material.min.scss";
+@import "lib/_bootstrap.min.scss";
+@import "partials/_clean-blog.scss";
 @import "partials/_style.scss";
