--- a/static/scss/partials/_style.scss
+++ b/static/scss/partials/_style.scss
@@ -1,62 +1,21 @@
-//from mdl
-$primaryColor: #795548;
-$secondaryColor: #FFAB40;
+$primaryColor: #444;
 
-//custom
-$footerColor: #444444;
-$bgColor: #E4E4E4;
+.intro-header {
+	background-color: $primaryColor;
+}
 
 .grex {
 
-	font-family: 'Roboto', 'Helvetica', sans-serif;
-	background: $bgColor url('/static/img/map.jpg') center top no-repeat;
-	background-size: cover;
-
-	&-perex {
-		font-size: 16px;
-		line-height: 28px;
+	&-logo {
+		height: 50px;
 	}
 
-	&-header {
-		& > .mdl-layout__drawer-button {
-			margin-top: 30px;
-		}
-
-		&__row {
-			&-100 {
-				height: 100px;
-			}
-		}
+	&-twitter {
+		margin-top: 30px;
 	}
 
-	&-footer {
-		background-color: $footerColor;
-	}
-
-	&__logo {
-		height: 70px;
-	}
-
-	&__posts {
-		max-width: 900px;
-		margin-top: 24px;
-
-		& > .mdl-card {
-			margin-bottom: 24px;
-
-			& .mdl-card__title,.mdl-card__supporting-text,.mdl-card__actions {
-				box-sizing: border-box;
-				width: 100%;
-				padding-right: 36px;
-				padding-left: 36px;
-			}
-
-			& .grex-text {
-				padding-right: 72px;
-				padding-left: 72px;
-				padding-bottom: 72px;
-			}
-		}
+	&-facebook {
+		margin-top: 30px;
 	}
 
 	&-zigzag {
@@ -77,7 +36,7 @@ $bgColor: #E4E4E4;
 		}
 	}
 
-	&-wave{
+	&-wave {
 		background-color: linear-gradient(to right, sandybrown, chocolate);
 		height: 50px;
 		position: relative;
@@ -91,7 +50,7 @@ $bgColor: #E4E4E4;
 			background-repeat: repeat;
 			height: 10px;
 			background-size: 20px 20px;
-			background-image: radial-gradient(circle at 10px -5px, transparent 12px, $footerColor 13px);
+			background-image: radial-gradient(circle at 10px -5px, transparent 12px, $primaryColor 13px);
 		}
 	}
 }
