--- a/static/scss/partials/_style.scss
+++ b/static/scss/partials/_style.scss
@@ -18,6 +18,44 @@ $primaryColor: #444;
 		margin-top: 30px;
 	}
 
+	&-no-margin {
+		margin: 0 0 0 0;
+	}
+
+	&-entry {
+		a {
+			word-wrap: break-word;
+		}
+	}
+
+	&-image {
+		position: relative;
+		display: inline-block;
+
+		&::after {
+			content: attr(data-caption);
+			display: block;
+			width: 100%;
+			background: rgba(0, 0, 0, 0.8);
+			color: #fff;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			padding: 0.5em 1em;
+			font-size: 0.7em;
+		}
+	}
+
+	&-img-left {
+		float: left;
+		margin: 10px 20px 10px 0;
+	}
+
+	&-img-right {
+		float: right;
+		margin: 10px 0 10px 20px;
+	}
+
 	&-zigzag {
 		position: relative;
 
